Onboard oauthlib package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -172,6 +172,7 @@ resources:
   - nodeenv
   - numpy
   - oauth2client
+  - oauthlib
   - openpyxl
   - opentelemetry-exporter-otlp
   - opentelemetry-instrumentation
