Onboard et-xmlfile package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -22,6 +22,9 @@ packages:
   dulwich:
     requirements_in:
       - setuptools_rust
+  et-xmlfile:
+    requirements_in:
+      - setuptools
   flake8:
     requirements_in:
       - setuptools
