Onboard google-cloud-pubsub package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -97,6 +97,7 @@ resources:
   - google-cloud-bigtable
   - google-cloud-dataproc
   - google-cloud-logging
+  - google-cloud-pubsub
   - google-cloud-resource-manager
   - google-cloud-storage
   - google-cloud-vision
