Onboard stack-data package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -273,6 +273,7 @@ resources:
   - sqlalchemy-spanner
   - sqlparse
   - sshtunnel
+  - stack-data
   - starlette
   - tableauserverclient
   - tabulate
