Onboard webencodings package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -149,6 +149,9 @@ packages:
   wcwidth:
     requirements_in:
       - setuptools
+  webencodings:
+    requirements_in:
+      - setuptools
   xmltodict:
     requirements_in:
       - setuptools
