Onboard sphinx package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -270,6 +270,7 @@ resources:
   - snowflake-connector-python
   - sortedcontainers
   - soupsieve
+  - sphinx
   - sqlalchemy
   - sqlalchemy-bigquery
   - sqlalchemy-spanner
