Onboard protobuf package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -102,6 +102,9 @@ packages:
   propcache:
     requirements_in:
       - Cython
+  protobuf:
+    requirements_in:
+      - setuptools
   py4j:
     requirements_in:
       - setuptools
