Onboard schema package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -125,6 +125,9 @@ packages:
   rfc3986:
     requirements_in:
       - setuptools
+  schema:
+    requirements_in:
+      - setuptools
   setproctitle:
     requirements_in:
       - setuptools
