Onboard types-pytz package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -301,6 +301,7 @@ resources:
   - types-protobuf
   - types-psutil
   - types-python-dateutil
+  - types-pytz
   - types-pyyaml
   - types-requests
   - types-setuptools
