Onboard jmespath package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -60,6 +60,9 @@ packages:
   inflection:
     requirements_in:
       - setuptools
+  jmespath:
+    requirements_in:
+      - setuptools
   jsonpointer:
     requirements_in:
       - setuptools
