Onboard azure-identity package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
   - authlib
   - awscli
   - azure-core
+  - azure-identity
   - azure-keyvault-secrets
   - azure-storage-blob
   - azure-storage-file-datalake
