Onboard httptools package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -57,6 +57,9 @@ packages:
       - hatch-fancy-pypi-readme
       - ninja
       - patchelf
+  httptools:
+    requirements_in:
+      - setuptools
   inflection:
     requirements_in:
       - setuptools
