Onboard websocket-client package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -322,6 +322,7 @@ resources:
   - weaviate-client
   - webcolors
   - webencodings
+  - websocket-client
   - websockets
   - wheel
   - widgetsnbextension
