--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -164,6 +164,9 @@ packages:
   webencodings:
     requirements_in:
       - setuptools
+  websocket-client:
+    requirements_in:
+      - setuptools
   xmltodict:
     requirements_in:
       - setuptools
