Onboard opentelemetry-proto package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -186,6 +186,7 @@ resources:
   - opentelemetry-exporter-otlp
   - opentelemetry-instrumentation
   - opentelemetry-instrumentation-requests
+  - opentelemetry-proto
   - opentelemetry-sdk
   - opentelemetry-util-http
   - oscrypto
