Onboard durationpy package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -25,6 +25,9 @@ packages:
   dulwich:
     requirements_in:
       - setuptools_rust
+  durationpy:
+    requirements_in:
+      - setuptools
   et-xmlfile:
     requirements_in:
       - setuptools
