Onboard jsonpatch package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -69,6 +69,9 @@ packages:
   jmespath:
     requirements_in:
       - setuptools
+  jsonpatch:
+    requirements_in:
+      - setuptools
   jsonpointer:
     requirements_in:
       - setuptools
