Onboard rfc3339-validator package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -134,6 +134,9 @@ packages:
   python-dotenv:
     requirements_in:
       - setuptools
+  rfc3339-validator:
+    requirements_in:
+      - setuptools
   rfc3986:
     requirements_in:
       - setuptools
