Onboard pytest-xdist package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -245,6 +245,7 @@ resources:
   - pytest
   - pytest-asyncio
   - pytest-cov
+  - pytest-xdist
   - python-dateutil
   - python-dotenv
   - python-json-logger
