--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -63,6 +63,9 @@ packages:
   httptools:
     requirements_in:
       - setuptools
+  identify:
+    requirements_in:
+      - setuptools
   inflection:
     requirements_in:
       - setuptools
