Onboard wsproto package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -179,6 +179,9 @@ packages:
   websocket-client:
     requirements_in:
       - setuptools
+  wsproto:
+    requirements_in:
+      - setuptools
   xmltodict:
     requirements_in:
       - setuptools
