Onboard datadog package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -58,6 +58,7 @@ resources:
   - databricks-sdk
   - databricks-sql-connector
   - dataclasses-json
+  - datadog
   - debugpy
   - decorator
   - deepdiff
