Onboard grpc-google-iam-v1 package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -114,6 +114,7 @@ resources:
   - graphql-core
   - graphviz
   - greenlet
+  - grpc-google-iam-v1
   - grpcio
   - grpcio-health-checking
   - grpcio-status
