Onboard pycparser package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -126,6 +126,9 @@ packages:
   pycodestyle:
     requirements_in:
       - setuptools
+  pycparser:
+    requirements_in:
+      - setuptools
   pyflakes:
     requirements_in:
       - setuptools
