--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -234,6 +234,7 @@ resources:
   - pyasn1
   - pyasn1-modules
   - pycodestyle
+  - pycparser
   - pycryptodomex
   - pydantic
   - pydantic-settings
