Onboard thrift package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -164,6 +164,9 @@ packages:
   sortedcontainers:
     requirements_in:
       - setuptools
+  thrift:
+    requirements_in:
+      - setuptools
   toml:
     requirements_in:
       - setuptools
