Onboard awswrangler package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -24,6 +24,7 @@ resources:
   - authlib
   - aws-lambda-powertools
   - awscli
+  - awswrangler
   - azure-core
   - azure-identity
   - azure-keyvault-secrets
