Onboard fastjsonschema package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -34,6 +34,9 @@ packages:
   et-xmlfile:
     requirements_in:
       - setuptools
+  fastjsonschema:
+    requirements_in:
+      - setuptools
   flake8:
     requirements_in:
       - setuptools
