Onboard watchdog package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -182,6 +182,9 @@ packages:
   typing-inspect:
     requirements_in:
       - setuptools
+  watchdog:
+    requirements_in:
+      - setuptools
   wcwidth:
     requirements_in:
       - setuptools
