Onboard google-resumable-media package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -115,6 +115,7 @@ resources:
   - google-cloud-storage
   - google-cloud-vision
   - google-crc32c
+  - google-resumable-media
   - googleapis-common-protos
   - graphql-core
   - graphviz
