--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -75,6 +75,9 @@ packages:
   inflection:
     requirements_in:
       - setuptools
+  jedi:
+    requirements_in:
+      - setuptools
   jmespath:
     requirements_in:
       - setuptools
