Onboard future package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -49,6 +49,9 @@ packages:
   frozenlist:
     requirements_in:
       - Cython
+  future:
+    requirements_in:
+      - setuptools
   gitdb:
     requirements_in:
       - setuptools
