Onboard async-lru package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -11,6 +11,9 @@ packages:
   asn1crypto:
     requirements_in:
       - setuptools
+  async-lru:
+    requirements_in:
+      - setuptools
   bleach:
     requirements_in:
       - setuptools
