Onboard fonttools package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -46,6 +46,9 @@ packages:
   flatbuffers:
     requirements_in:
       - setuptools
+  fonttools:
+    requirements_in:
+      - setuptools
   fqdn:
     requirements_in:
       - setuptools
