Onboard pytest-mock package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -269,6 +269,7 @@ resources:
   - pytest
   - pytest-asyncio
   - pytest-cov
+  - pytest-mock
   - pytest-xdist
   - python-dateutil
   - python-dotenv
