Onboard babel package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -31,6 +31,7 @@ resources:
   - azure-keyvault-secrets
   - azure-storage-blob
   - azure-storage-file-datalake
+  - babel
   - backoff
   - backports-tarfile
   - beautifulsoup4
