--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -14,6 +14,9 @@ packages:
   async-lru:
     requirements_in:
       - setuptools
+  babel:
+    requirements_in:
+      - setuptools
   bleach:
     requirements_in:
       - setuptools
