Onboard portalocker package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -238,6 +238,7 @@ resources:
   - ply
   - poetry-core
   - poetry-plugin-export
+  - portalocker
   - pre-commit
   - prometheus-client
   - prompt-toolkit
