Onboard google-cloud-secret-manager package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -118,6 +118,7 @@ resources:
   - google-cloud-logging
   - google-cloud-pubsub
   - google-cloud-resource-manager
+  - google-cloud-secret-manager
   - google-cloud-storage
   - google-cloud-vision
   - google-crc32c
