Onboard opentelemetry-exporter-prometheus package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -214,6 +214,7 @@ resources:
   - oauthlib
   - openpyxl
   - opentelemetry-exporter-otlp
+  - opentelemetry-exporter-prometheus
   - opentelemetry-instrumentation
   - opentelemetry-instrumentation-requests
   - opentelemetry-proto
