Onboard xlsxwriter package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -212,6 +212,9 @@ packages:
   wsproto:
     requirements_in:
       - setuptools
+  xlsxwriter:
+    requirements_in:
+      - setuptools
   xmltodict:
     requirements_in:
       - setuptools
