--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -81,6 +81,9 @@ packages:
   httptools:
     requirements_in:
       - setuptools
+  humanfriendly:
+    requirements_in:
+      - setuptools
   identify:
     requirements_in:
       - setuptools
