Onboard opentelemetry-semantic-conventions package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -224,6 +224,7 @@ resources:
   - opentelemetry-instrumentation-requests
   - opentelemetry-proto
   - opentelemetry-sdk
+  - opentelemetry-semantic-conventions
   - opentelemetry-util-http
   - oscrypto
   - overrides
