Onboard cython package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/packages/additional-requirements.yaml
+++ b/packages/additional-requirements.yaml
@@ -26,6 +26,9 @@ packages:
   click-plugins:
     requirements_in:
       - setuptools
+  cython:
+    requirements_in:
+      - setuptools
   defusedxml:
     requirements_in:
       - setuptools
