--- a/konflux/components/kustomization.yaml
+++ b/konflux/components/kustomization.yaml
@@ -62,6 +62,7 @@ resources:
   - crashtest
   - croniter
   - cycler
+  - cython
   - databricks-sdk
   - databricks-sql-connector
   - dataclasses-json
