--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 typer = "^0.12.0"
 rich = "^13.0.0"
 pyyaml = "^6.0.0"
+requests = "^2.31.0"
 pip = "23.3.2"
 pip-tools = "^7.0.0"
 pybuild-deps = {git = "https://github.com/lcarva/pybuild-deps.git", branch = "handle-no-resolver"}
