--- a/konflux/components/base/image-repository.yaml
+++ b/konflux/components/base/image-repository.yaml
@@ -2,7 +2,7 @@ apiVersion: appstudio.redhat.com/v1alpha1
 kind: ImageRepository
 metadata:
   labels:
-    appstudio.redhat.com/application: calunga
+    appstudio.redhat.com/application: calunga-lucarval-test
     appstudio.redhat.com/component: package-name
   name: package-name
 spec:
