--- a/.tekton/packages-on-pull-request.yaml
+++ b/.tekton/packages-on-pull-request.yaml
@@ -3,7 +3,7 @@ apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
   annotations:
-    build.appstudio.openshift.io/repo: https://github.com/lcarva/calunga?rev={{revision}}
+    build.appstudio.openshift.io/repo: https://github.com/lcarva/wheel-build-task-test?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
@@ -14,8 +14,8 @@ metadata:
     pipelinesascode.tekton.dev/on-path-change: "[packages/werkzeug/**]"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: calunga
-    appstudio.openshift.io/component: werkzeug
+    appstudio.openshift.io/application: calunga-lucarval-test
+    appstudio.openshift.io/component: werkzeug-lucarval-test
     pipelines.appstudio.openshift.io/type: build
   name: werkzeug-on-pull-request
   namespace: calunga-tenant
@@ -26,7 +26,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/calunga-tenant/werkzeug:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/calunga-tenant/werkzeug-lucarval-test:on-pr-{{revision}}
   - name: image-expires-after
     value: 5d
   - name: path-context
