--- a/.tekton/packages-on-push.yaml
+++ b/.tekton/packages-on-push.yaml
@@ -3,7 +3,7 @@ apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
   annotations:
-    build.appstudio.openshift.io/repo: https://github.com/lcarva/calunga?rev={{revision}}
+    build.appstudio.openshift.io/repo: https://github.com/lcarva/wheel-build-task-test?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
@@ -13,8 +13,8 @@ metadata:
     pipelinesascode.tekton.dev/on-path-change: "[packages/werkzeug/**]"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: calunga
-    appstudio.openshift.io/component: werkzeug
+    appstudio.openshift.io/application: calunga-lucarval-test
+    appstudio.openshift.io/component: werkzeug-lucarval-test
     pipelines.appstudio.openshift.io/type: build
   name: werkzeug-on-push
   namespace: calunga-tenant
@@ -25,7 +25,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/calunga-tenant/werkzeug:{{revision}}
+    value: quay.io/redhat-user-workloads/calunga-tenant/werkzeug-lucarval-test:{{revision}}
   - name: path-context
     value: packages/werkzeug
   - name: dockerfile
