--- a/konflux/application.yaml
+++ b/konflux/application.yaml
@@ -1,10 +1,10 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: Application
 metadata:
-  name: calunga
+  name: calunga-lucarval-test
 spec:
   appModelRepository:
     url: ""
-  displayName: calunga
+  displayName: calunga-lucarval-test
   gitOpsRepository:
     url: ""
